tests/should_fail/terminates/recursion_through_clone.stderr
error: called program function `std::clone::Clone::clone` in program (terminates) context
 --> recursion_through_clone.rs:9:14
  |
9 |         (S,).clone().0
  |              ^^^^^

error: Mutually recursive functions: when calling `<S as std::clone::Clone>::clone`...
 --> recursion_through_clone.rs:8:5
  |
8 |     fn clone(&self) -> Self {
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
note: `<S as std::clone::Clone>::clone` uses the impl `<S as std::clone::Clone>` via the call to `std::clone::Clone::clone`...
 --> recursion_through_clone.rs:9:14
  |
9 |         (S,).clone().0
  |              ^^^^^
note: finally the method `<S as std::clone::Clone>::clone` might be called
 --> recursion_through_clone.rs:8:5
  |
8 |     fn clone(&self) -> Self {
  |     ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

